--- a/filterexample1.html
+++ b/filterexample1.html
@@ -36,7 +36,7 @@ var app = angular.module("peopleApp",[]).service("sortingService",function(){
 				
 var peoples = [{name:"janaki naidu",gender:1,age:26,productprice:250.6869,city:"HYD"},
 						  {name:"venkatesh duddu",gender:1,age:30,productprice:500,city:"BAN"},
-						  {name:"smruthi lenka",gender:2,age:24,productprice:100,city:"HYD"},
+						  {name:"sridevi",gender:2,age:24,productprice:100,city:"HYD"},
 						  {name:"saiteja",gender:1,age:26,productprice:555,city:"PUNE"},
 						  {name:"hariteja",gender:2,age:36,productprice:500.259,city:"BAN"},
 						   {name:"srini vas",gender:1,age:26,productprice:500.259,city:"PUNE"},
